@@ -1,6 +1,7 @@
 2.0.12.dev0
  * Add documentation on repositories, including SSH, Rclone, S3, and B2:
    https://torsion.org/borgmatic/reference/configuration/repositories/
+ * Improve documentation search results for individual configuration options.
 
 2.0.11
  * #957: Document borgmatic's limitations around parallelism—both its own and Borg's. See the
